swagger fixed x-api-key in header
